--- a/templates/forms/new_deal.html
+++ b/templates/forms/new_deal.html
@@ -1,28 +1,28 @@
 {% extends 'layouts/main.html' %}
-{% block title %}New Item{% endblock %}
+{% block title %} New Deals {% endblock %}
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form">
       <h3 class="form-heading">Create a new Item</h3>
 
       <div class="form-group">
-        <label for="items">Items</label>
-        {{ form.items(class_ = 'form-control', placeholder='burger', autofocus = true) }}
+        <label for="item">Item</label>
+        {{ form.item(class_ = 'form-control', placeholder='burger', autofocus = true) }}
       </div>
 
       <div class="form-group">
         <label for="price">Price</label>
-        {{ form.price(class_ = 'form-control', placeholder='999', autofocus = true) }}
+        {{ form.price(class_ = 'form-control', placeholder=999, autofocus = true) }}
       </div>
 
       <div class="form-group">
-        <label for="pointsRequired">PointsRequired</label>
-        {{ form.pointsRequired(class_ = 'form-control', placeholder='666', autofocus = true) }}
+        <label for="points_required">PointsRequired</label>
+        {{ form.points_required(class_ = 'form-control', placeholder= 666, autofocus = true) }}
       </div>
 
       <div class="form-group">
-        <label for="vendorID">VendorID</label>
-        {{ form.vendorID(class_ = 'form-control', placeholder='1234', autofocus = true) }}
+        <label for="vendor_id">VendorID</label>
+        {{ form.vendor_id(class_ = 'form-control', placeholder= 12, autofocus = true) }}
       </div>
 
       <input type="submit" value="Create Item" class="btn btn-primary btn-lg btn-block">
