--- a/templates/pages/show_vendor.html
+++ b/templates/pages/show_vendor.html
@@ -5,7 +5,7 @@
 	<div class="col-sm-6">
 		<h1 class="monospace">
 			{{ vendor.name }}
-			</h1>
+		</h1>
 			<p class="subtitle">
 				ID: {{ vendor.id }}
 			</p>
@@ -16,6 +16,26 @@
 				Location: {{ vendor.location}}
 			</p>
 			<a href="/deals/create"><button class="btn btn-default btn-lg">Create a new deal</button></a>
+	</div>
+</div>
+<section>
+	<h2 class="monospace">Menu</h2>
+	<div class="row">
+		
+		{%for menu in vendor.fullMenu %}
+		<p class="item">
+			{{ menu.menu_item}}: ${{ menu.menu_price}}
+		</p> 
+		
+		
+		{% endfor %}
+	</div>
+	<a href="/vendors/{{ vendor.id }}/purchase"><button class="btn btn-default btn-lg">Make a purchase</button></a>
+</section>
+
+<a href="/vendors/{{ vendor.id }}/edit"><button class="btn btn-default btn-lg">Edit Vendor</button></a>
+<a href="/vendors/delete/{{ vendor.id }}"><button class="btn btn-default btn-lg">Delete Vendor</button></a>
+
 
 
 {% endblock %}
