--- a/templates/pages/vendors.html
+++ b/templates/pages/vendors.html
@@ -12,4 +12,6 @@
 	</li>
 	{% endfor %}
 </ul>
+<a href="/vendors/edit"><button class="btn btn-default btn-lg">Edit Vendor</button></a>
+
 {% endblock %}
