--- a/templates/forms/new_vendor.html
+++ b/templates/forms/new_vendor.html
@@ -6,8 +6,9 @@
       <h3 class="form-heading">List a new vendor</h3>
       <div class="form-group">
         <label for="name">Name</label>
-        {{ form.name(class_ = 'form-control', autofocus = true) }}
+        {{ form.name(class_ = 'form-control', autofocus = true, ) }}
       </div>
+
       <div class="form-group">
           <label>Category</label>
           <div class="form-inline">
@@ -16,10 +17,41 @@
             </div>
           </div>
         </div>
+
+      <div class="form-group">
+        <label>Cost</label>
+        <div class="form-inline">
+          <div class="form-group">
+            {{ form.cost(class_ = 'form-control', placeholder='cost', autofocus = true) }}
+            </div>
+          </div>
+        </div>
+
+      <div class="form-group">
+        <label>Cuisine</label>
+         <div class="form-inline">
+          <div class="form-group">
+            {{ form.cuisine(class_ = 'form-control', placeholder='cuisine', autofocus = true) }}
+            </div>
+          </div>
+         </div>
   
       <div class="form-group">
-        <label for="location">Location</label>
-        {{ form.location(class_ = 'form-control', autofocus = true) }}
+        <label>Location</label>
+        <div class="form-inline">
+        <div class="form-group">
+          {{ form.location(class_ = 'form-control', autofocus = true) }}
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>Points Per Dollar Spent</label>
+        <div class="form-inline">
+        <div class="form-group">
+          {{ form.purchase_to_points(class_ = 'form-control', autofocus = true) }}
+          </div>
+        </div>
       </div>
 
         
