--- a/templates/forms/purchase.html
+++ b/templates/forms/purchase.html
@@ -1,4 +1,4 @@
-<form action = "/vendors/{{data.vendor_id}}/purchase" method = "post" >
+<form action = "/vendors/{{data.vendor_id}}/purchase_info" method = "post" >
     <div>
         <label for="user">Choose a user:</label>
         <select id="user" name="user">
@@ -11,7 +11,7 @@
     <div> Choose the item you purchased:
         {%for menu in data.menu%}
         
-        <input type="checkbox" id={{menu.menu_id}} name="items" value={{menu.menu_id}}>
+        <input type="checkbox" id="items" name="items" value={{menu.menu_id}}>
             <label for={{menu.menu_id}}>{{menu.menu_item}}: ${{menu.menu_price}}</label>
         {% endfor %}
 
