--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -48,7 +48,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">🔥</a>
+          <a class="navbar-brand" href="/">🍲</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -107,7 +107,7 @@
 
   <div id="footer">
     <div class="container">
-      <p>Fyyur &copy; All Rights Reserved.</p>
+      <p>Sombrezos &copy; All Rights Reserved.</p>
       {% block footer %}{% endblock %}
     </div>
   </div>
