--- a/templates/pages/show_user.html
+++ b/templates/pages/show_user.html
@@ -6,11 +6,20 @@
 		<h1 class="monospace">
 			{{ user.username }}
 			</h1>
+			<p class="ID">
+				ID: {{ user.id }}
+			</p>
 			<p class="subtitle">
-				ID: {{ vendor.id }}
+				Favorite Vendors: {{ user.favorites }}
 			</p>
 
+
 			<h5><a href="/users/delete/{{ user.id }}"> Delete: {{ user.username }}</a></h5>
+			<h5><a href="/users/{{ user.id }}/rewards"> Rewards For: {{ user.username }}</a></h5>
+			<h5><a href="/users/{{ user.id }}/add_favorites"> Add vendor to favorites for: {{ user.username }}</a></h5>
+			<h5><a href="/users/{{ user.id }}/delete_favorites"> Remove vendor from favorites for: {{ user.username }}</a></h5>
+
+
 
 
 {% endblock %}
