--- a/templates/pages/show_vendor.html
+++ b/templates/pages/show_vendor.html
@@ -24,6 +24,7 @@
 			<p class="location">
 				Location: {{ vendor.location}}
 			</p>
+			
 
 	</div>
 </div>
@@ -55,6 +56,18 @@
 		{% endfor %}
 	</div>
 	<a href="/vendors/{{ vendor.id }}/purchase_deal"><button class="btn btn-default btn-lg"> Log Purchase from Deal</button></a>
+</section>
+
+<section>
+	<h2 class="monospace">Top Similar Vendors</h2>
+	<div class="item">
+		{%for record in vendor.similar_vendors %}
+		<p class="item">
+			Name: {{ record.vendor.name}} <br>
+			Similarity: {{record.count}} out of 3
+		</p>
+		{% endfor %}
+	</div>
 </section>
 
 <a href="/vendors/{{ vendor.id }}/edit"><button class="btn btn-default btn-lg">Edit Vendor Info</button></a>
