--- a/templates/pages/show_user.html
+++ b/templates/pages/show_user.html
@@ -3,38 +3,54 @@
 {% block content %}
 <div class="row">
 	<div class="col-sm-6">
-		<h1 class="monospace">
+		<h3>
 			{{ user.username }}
-			</h1>
-			<p class="ID">
-				ID: {{ user.id }}
+			</h3>
+			<p class="lead"> ID: 
+				{{ user.id }}
 			</p>
-			<p class="subtitle">
-				Favorite Vendors: {{ user.favorites }}
-			</p>
+			
+			<p class="lead"> Favorite Vendors: </p> 
+
+				{%for fav in user.favorites%}
+				<p>{{ fav }}</p>
+				{% endfor %}
 			</div>
 </div>
 
 <section>
-	<h2 class="monospace">Recommended Vendors From Favorites</h2>
-	<div class="item">
+	<h2 class="lead">Recommended Vendors From Favorites</h2>
 		{%for record in user.recs %}
 		<p class="item">
 			Name: {{ record.vendor.name}} <br>
 			Recommendation Score: {{record.count}} 
 		</p>
 		{% endfor %}
-	</div>
 </section>
 
-			
+<div class="container">
+	<h2>Rewards</h2>
+	<table class="table">
+		<thread>
+			<tr>
+				<th>Vendor</th>
+				<th>Points</th>
+			</tr>
+		</thread>
 
-
-			<h5><a href="/users/delete/{{ user.id }}"> Delete: {{ user.username }}</a></h5>
-			<h5><a href="/users/{{ user.id }}/rewards"> Rewards For: {{ user.username }}</a></h5>
-			<h5><a href="/users/{{ user.id }}/add_favorites"> Add vendor to favorites for: {{ user.username }}</a></h5>
-			<h5><a href="/users/{{ user.id }}/delete_favorites"> Remove vendor from favorites for: {{ user.username }}</a></h5>
-
+		<tbody>
+			{% for info in user.rewards %}
+			<tr> 
+				<td>{{info.vendor}}</td>
+				<td>{{info.points}}</td>
+			</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+</div>
+	<a href="/users/delete/{{ user.id }}" class="btn btn-primary"> Delete: {{ user.username }}</a>
+	<a href="/users/{{ user.id }}/add_favorites" class="btn btn-light"> Add vendor to favorites for: {{ user.username }}</a>
+	<a href="/users/{{ user.id }}/delete_favorites" class="btn btn-light"> Remove vendor from favorites for: {{ user.username }}</a>
 
 
 
