--- a/templates/forms/purchase.html
+++ b/templates/forms/purchase.html
@@ -1,3 +1,8 @@
+{% extends 'layouts/main.html' %}
+{% block title %}New Purchase{% endblock %}
+{% block content %}
+
+<h4>Log the purchase you made</h4>
 <form action = "/vendors/{{data.vendor_id}}/purchase_info" method = "post" >
     <div>
         <label for="user">Choose a user:</label>
@@ -7,15 +12,19 @@
         {% endfor %}
         </select>
     </div>
+    <br>
    
     <div> Choose the item you purchased:
         {%for menu in data.menu%}
-        
-        <input type="checkbox" id="items" name="items" value={{menu.menu_id}}>
+        <div class="radio">
+            <input type="radio" id="items" name="items" value={{menu.menu_id}}>
             <label for={{menu.menu_id}}>{{menu.menu_item}}: ${{menu.menu_price}}</label>
+        </div>
+        
         {% endfor %}
-
     </div>
 
    <input type="submit">
 </form>
+
+{% endblock %}
