--- a/templates/pages/show_vendor.html
+++ b/templates/pages/show_vendor.html
@@ -3,9 +3,8 @@
 {% block content %}
 <div class="row">
 	<div class="col-sm-6">
-		<h1 class="monospace">
-			{{ vendor.name }}
-		</h1>
+		<h1>{{ vendor.name }}</h1>
+			
 			<p class="id">
 				ID: {{ vendor.id }}
 			</p>
@@ -24,58 +23,76 @@
 			<p class="location">
 				Location: {{ vendor.location}}
 			</p>
-			
-
 	</div>
 </div>
-<section>
-	<h2 class="monospace">Menu</h2>
-	<div class="row">
-		
-		{%for menu in vendor.fullMenu %}
-		<p class="item">
-			{{ menu.menu_item}}: ${{ menu.menu_price}}
-		</p> 
-		
-		
-		{% endfor %}
+<br>
+<div class="container">
+	<h2>Menu</h2>
+	<table class="table">
+		<thread>
+			<tr>
+				<th>Item</th>
+				<th>Price</th>
+			</tr>
+		</thread>
+
+		<tbody>
+			{%for menu in vendor.fullMenu %}
+			<tr> 
+				<td>{{menu.menu_item}}</td>
+				<td>{{menu.menu_price}}</td>
+			</tr>
+			
+			{% endfor %}
+		</tbody>
+	</table>
+</div>
+
+	<a href="/vendors/{{ vendor.id }}/purchase" class="btn btn-secondary btn-lg">Log Purchase from Menu</a>
+<br>
+<br>
+	<div class="container">
+		<h2>Deals</h2>
+		<table class="table">
+			<thread>
+				<tr>
+					<th>Item</th>
+					<th>Lowered Price</th>
+					<th>Points to Purchase</th>
+				</tr>
+			</thread>
+			<tbody>
+				{%for deal in vendor.allDeals %}
+				<tr>
+					<td>{{deal.item}}</td>
+					<td>${{deal.price}}</td>
+					<td>${{deal.points_required}}</td>
+				</tr>
+				
+				{% endfor %}
+			</tbody>
+		</table>
 	</div>
-	<a href="/vendors/{{ vendor.id }}/purchase"><button class="btn btn-default btn-lg">Log Purchase from Menu</button></a>
-</section>
+<a href="/vendors/{{ vendor.id }}/purchase_deal" class="btn btn-secondary btn-lg"> Log Purchase from Deal</a>
 
 <section>
-	<h2 class="monospace">Deals</h2>
-	<div class="row">
-		
-		{%for deal in vendor.allDeals %}
-		<p class="item">
-			{{ deal.item}}: ${{ deal.price}} or {{deal.points_required}} rewards points 
-		</p> 
-		
-		
-		{% endfor %}
-	</div>
-	<a href="/vendors/{{ vendor.id }}/purchase_deal"><button class="btn btn-default btn-lg"> Log Purchase from Deal</button></a>
-</section>
-
-<section>
-	<h2 class="monospace">Top Similar Vendors</h2>
-	<div class="item">
+	<h2> Top Similar Vendors</h2>
 		{%for record in vendor.similar_vendors %}
 		<p class="item">
 			Name: {{ record.vendor.name}} <br>
 			Similarity: {{record.count}} out of 3
 		</p>
 		{% endfor %}
-	</div>
 </section>
 
-<a href="/vendors/{{ vendor.id }}/edit"><button class="btn btn-default btn-lg">Edit Vendor Info</button></a>
-<a href="/vendors/delete/{{ vendor.id }}"><button class="btn btn-default btn-lg">Delete Vendor</button></a>
-<a href="/vendors/{{ vendor.id }}/add_menu_item"><button class="btn btn-default btn-lg">Add Menu Item</button></a>
-<a href="/vendors/{{ vendor.id }}/delete_menu_item"><button class="btn btn-default btn-lg">Delete Menu Item</button></a>
+<div class="btn-group">
+	<a href="/vendors/{{ vendor.id }}/edit" class="btn btn-info btn-lg">Edit Vendor Info</a>
+	<a href="/vendors/delete/{{ vendor.id }}" class="btn btn-info btn-lg">Delete Vendor</a>
+	<a href="/vendors/{{ vendor.id }}/add_menu_item" class="btn btn-info btn-lg">Add Menu Item</a>
+	<a href="/vendors/{{ vendor.id }}/delete_menu_item" class="btn btn-info btn-lg">Delete Menu Item</a>
+	<a href="/deals/create" class="btn btn-info btn-lg">Create a new deal</a>
+</div>
 
-<a href="/deals/create"><button class="btn btn-default btn-lg">Create a new deal</button></a>
 
 
 
