--- a/templates/pages/vendors.html
+++ b/templates/pages/vendors.html
@@ -2,29 +2,22 @@
 {% block title %}Sombreza | Vendors{% endblock %}
 {% block content %}
 
-<ul class="items">
+<h4> Vendors </h4>
+<div class="list-group">
 	{% for vendor in data.vendors %}
-	<li>
-		<a href="/vendors/{{ vendor.id }}">
-			<div class="item">
-				<h5>{{ vendor.name }}</h5>
-			</div>
-		</a>
-	</li>
-	{% endfor %}
-</ul>
-
-
-<ul class="deals">
-	{% for deal in data.deals %}
-	<li>
-		
-		<h5>{{ deal.vendor_name }} : {{ deal.deal_item }} for {{ deal.deal_price }} dollars or {{ deal.deal_points }} points</h5>
-			
-	</li>
-	{% endfor %}
-
 	
+		<a href="/vendors/{{ vendor.id }}" class="list-group-item"> {{ vendor.name }} </a>
+	{% endfor %}
+</div>
+<br>
+<br>
+<br>
+
+<h4> Deals </h4>
+<ul>
+	{% for deal in data.deals %}
+		<p>{{ deal.vendor_name }} : {{ deal.deal_item }} for {{ deal.deal_price }} dollars or {{ deal.deal_points }} points</p>
+	{% endfor %}
 </ul>
 
 {% endblock %}
