--- a/templates/pages/search_vendors.html
+++ b/templates/pages/search_vendors.html
@@ -5,8 +5,7 @@
 <ul class="items">
 	{% for vendor in results.data %}
 	<li>
-		<a href="/vendor/{{ vendor.id }}">
-			<i class="fas fa-music"></i>
+		<a href="/vendors/{{ vendor.id }}">
 			<div class="item">
 				<h5>{{ vendor.name }}</h5>
 			</div>
