--- a/templates/pages/search_users.html
+++ b/templates/pages/search_users.html
@@ -8,7 +8,7 @@
 		<a href="/users/{{ user.id }}">
 			<i class="fas fa-users"></i>
 			<div class="item">
-				<h5>{{ user.username }}</h5>
+				<h5>{{ user.name }}</h5>
 			</div>
 		</a>
 	</li>
