--- a/templates/pages/show_user.html
+++ b/templates/pages/show_user.html
@@ -20,6 +20,7 @@
 
 <section>
 	<h2 class="lead">Recommended Vendors From Favorites</h2>
+		<p class="subtitle"> The higher recommendation score, the better the recommendation </p>
 		{%for record in user.recs %}
 		<p class="item">
 			Name: {{ record.vendor.name}} <br>
