--- a/templates/pages/show_vendor.html
+++ b/templates/pages/show_vendor.html
@@ -66,7 +66,7 @@
 				<tr>
 					<td>{{deal.item}}</td>
 					<td>${{deal.price}}</td>
-					<td>${{deal.points_required}}</td>
+					<td>{{deal.points_required}}</td>
 				</tr>
 				
 				{% endfor %}
